<resources>
    <!-- Mange Strings jeg ikke har puttet inni her enda, siden kjapp testing (Legg til senere) -->
    <string name="app_name">Crypto Clicker</string>
    <string name="usernameString">Username:</string>
    <string name="delete_alert_yes">Yes</string>
    <string name="delete_alert_cancel">Cancel</string>
    <string name="delete_alert_title">Delete Profile</string>
    <string name="delete_alert_message">Are you sure you want to delete profile</string>
    <string name="emty_list_text">Start a new game to populate this list</string>

    <string name="new_game_created_profile">Profile successfully created.</string>
    <string name="new_game_info">Please put more than 3 characters</string>

    <string name="main_meny_confirmation_service_title">Stop Mining</string>
    <string name="main_meny_confirmation_service_message">Are you sure you want to stop mining?</string>
    <string name="main_meny_confirmation_service_positiv">Yes</string>
    <string name="main_meny_confirmation_service_nevagive">Continue mining</string>

    <string name="help_title">How to play</string>
    <string name="help_info_text_1">In this game you have mainly two resources, Bitcoins and USD. You can
        click coin to mine bitcoins. If you have had enough of clicking, you can hold and drag the coin to mine, but this is considerably slower </string>
    <string name="help_info_text_2">To gather USD, you have to exchange your Bitcoins. Head over to Exchange to do this, then click on desired amount to exchange.</string>

    <string name="help_info_market">In the marked you have two things you can buy, one is ClickUpgrade, which will upgrade the amount of Bitcoins you gather when clicking on Bitcoin.
                            The second is Upgrade, which will speed up how much Bitcoins you gather every second. ClickUpgrades cost USD, while Upgrades cost Bitcoins to buy</string>

    <string name="help_info_text_3">When you have mined enough resource, head over to Marked to spend bitcoins</string>

    <string name="help_info_service">In the background a miner will be running, it will mine Bitcoins for you base on the
        amount of Upgrades you have. It can be turned off at any time in and outside of the game.\nTo change how frequent it will update, go to Settings.</string>


    <!-- Verdiene vi kan velge mellom når vi velger språk inni settings, men fikk ikke tid til å lage Strings av alle tekster. -->
    <string-array name="optionsMenuLanguage">
        <item>NOK</item>
        <item>ENG</item>
    </string-array>
    <string name="title_activity_settings_activity__new">Settings</string>

    <!-- Strings related to Settings -->


    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Mining</string>




    <!-- Slik at brukeren kan ha noen verdier å velge fra om forandring av Delay på bakgrunns prosesen. -->
    <string name="pref_title_sync_frequency">Mining Delay</string>
    <string name="pref_title_sync_frequency_box">Mining Delay (won\'t change delay of currently mining service)</string>
    <string name="help_info_progress">To view extra information visit Progress.</string>

    <string-array name="pref_sync_frequency_titles">
        <item>1 minutes</item>
        <item>5 minutes</item>
        <item>10 minutes</item>
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>60 minutes</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>60</item>
        <item>300</item>
        <item>600</item>
        <item>900</item>
        <item>1800</item>
        <item>3600</item>
    </string-array>

</resources>
