<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:id="@+id/help_layout"
        android:padding="10dp"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help_title"
            android:textSize="28sp"
            android:id="@+id/tv_help_title" />

        <TextView
            android:id="@+id/tv_help_info1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help_info_text_1"/>

        <ImageView
            android:id="@+id/iv_help_bitcoin"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/bitcoin"
            android:layout_gravity="center_horizontal" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help_info_text_2"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/money_bag_96"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:id="@+id/tv_help_info2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help_info_text_3"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="20dp"/>

        <TextView
            android:id="@+id/tv_help_market"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help_info_market"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="20dp"/>

        <TextView
            android:id="@+id/tv_help_info_service"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help_info_service" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:src="@drawable/mining_service_help_image"
            android:id="@+id/iv_help_service" />
        <View
            android:layout_width="match_parent"
            android:layout_height="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help_info_progress"/>


    </LinearLayout>

</ScrollView>

